# Natural-Language-2-SQL-USING-LANGGRAPH

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  speed_test.py  test_agent.py
scripts/: create_sample_db.py
src/nltosql/: __init__.py  agent.py  config.py  db_manager.py  prompts.py  schema_extractor.py  sql_validator.py
src/nltosql.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
static/css/: style.css
static/js/: main.js
templates/: base.html  index.html  login.html
